==> RT-Thread/rt-thread/bsp/wch/risc-v/libraries/ch32_drivers/drv_eth.c <==
#include "board.h"
#include <rtdevice.h>
#include <netif/ethernetif.h>
#include "lwipopts.h"
#include <drv_eth.h>
#define LOG_TAG              "drv.eth"
#include <drv_log.h>
#define MAX_ADDR_LEN 6
#define  ETH_DMARxDesc_FrameLengthShift           16
#define define_O(a,b) \
GPIO_InitStructure.GPIO_Pin = b;\
GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;\
GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;\
GPIO_Init(a, &GPIO_InitStructure)
#define define_I(a,b) \
GPIO_InitStructure.GPIO_Pin = b;\
GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;\
GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;\
GPIO_Init(a, &GPIO_InitStructure)
#define __is_print(ch) ((unsigned int)((ch) - ' ') < 127u - ' ')

static rt_err_t rt_ch32_eth_init(rt_device_t dev)
{
    ETH_InitTypeDef ETH_InitStructure={0};
    RCC_PLL3Cmd(DISABLE);
    RCC_PREDIV2Config(RCC_PREDIV2_Div2);
    RCC_PLL3Config(RCC_PLL3Mul_15);
    RCC_PLL3Cmd(ENABLE);
    while(RESET == RCC_GetFlagStatus(RCC_FLAG_PLL3RDY));
    LOG_D("PLL3 Init Finish\r\n");
    RCC_AHBPeriphClockCmd(RCC_AHBPeriph_ETH_MAC|RCC_AHBPeriph_ETH_MAC_Tx|RCC_AHBPeriph_ETH_MAC_Rx,ENABLE);
#ifdef USE10BASE_T
    /* Enable internal 10BASE-T PHY*/
    EXTEN->EXTEN_CTR |=EXTEN_ETH_10M_EN;
#endif
#ifdef USE_GIGA_MAC
    /* Enable 1G MAC*/
    EXTEN->EXTEN_CTR |= EXTEN_ETH_RGMII_SEL;
    /* mac clock use external 125MHz,input from PB1 */
    RCC_ETH1GCLKConfig(RCC_ETH1GCLKSource_PB1_IN);
    RCC_ETH1G_125Mcmd(ENABLE);
    /*  Enable RGMII GPIO */
    GETH_pin_init();
#endif

#ifdef USE_FAST_MAC
    /*  Enable MII or RMII GPIO */
    FETH_pin_init();
#endif
    /* Reset ETHERNET on AHB Bus */
    ETH_DeInit();
    /* Software reset */
    ETH_SoftwareReset();
    /* Wait for software reset */
    while(ETH->DMABMR & ETH_DMABMR_SR);
    LOG_D("ETH RST Finish\r\n");

    ETH_StructInit(&ETH_InitStructure);
    ETH_InitStructure.ETH_Mode = ETH_Mode_FullDuplex;
    ETH_InitStructure.ETH_Speed = ETH_Speed_1000M;
    ETH_InitStructure.ETH_AutoNegotiation = ETH_AutoNegotiation_Enable  ;
    ETH_InitStructure.ETH_LoopbackMode = ETH_LoopbackMode_Disable;
    ETH_InitStructure.ETH_RetryTransmission = ETH_RetryTransmission_Disable;
    ETH_InitStructure.ETH_AutomaticPadCRCStrip = ETH_AutomaticPadCRCStrip_Disable;
    ETH_InitStructure.ETH_ReceiveAll = ETH_ReceiveAll_Enable;
    ETH_InitStructure.ETH_BroadcastFramesReception = ETH_BroadcastFramesReception_Enable;
    ETH_InitStructure.ETH_PromiscuousMode = ETH_PromiscuousMode_Enable;
    ETH_InitStructure.ETH_MulticastFramesFilter = ETH_MulticastFramesFilter_Perfect;
    ETH_InitStructure.ETH_UnicastFramesFilter = ETH_UnicastFramesFilter_Perfect;
#ifdef CHECKSUM_BY_HARDWARE
    ETH_InitStructure.ETH_ChecksumOffload = ETH_ChecksumOffload_Enable;
#endif
    /*------------------------   DMA   -----------------------------------*/
    /* When we use the Checksum offload feature, we need to enable the Store and Forward mode:
    the store and forward guarantee that a whole frame is stored in the FIFO, so the MAC can insert/verify the checksum,
    if the checksum is OK the DMA can handle the frame otherwise the frame is dropped */
    ETH_InitStructure.ETH_DropTCPIPChecksumErrorFrame = ETH_DropTCPIPChecksumErrorFrame_Enable;
    ETH_InitStructure.ETH_ReceiveStoreForward = ETH_ReceiveStoreForward_Enable;
    ETH_InitStructure.ETH_TransmitStoreForward = ETH_TransmitStoreForward_Enable;
    ETH_InitStructure.ETH_ForwardErrorFrames = ETH_ForwardErrorFrames_Enable;
    ETH_InitStructure.ETH_ForwardUndersizedGoodFrames = ETH_ForwardUndersizedGoodFrames_Enable;
    ETH_InitStructure.ETH_SecondFrameOperate = ETH_SecondFrameOperate_Disable;
    ETH_InitStructure.ETH_AddressAlignedBeats = ETH_AddressAlignedBeats_Enable;
    ETH_InitStructure.ETH_FixedBurst = ETH_FixedBurst_Enable;
    ETH_InitStructure.ETH_RxDMABurstLength = ETH_RxDMABurstLength_32Beat;
    ETH_InitStructure.ETH_TxDMABurstLength = ETH_TxDMABurstLength_32Beat;
    ETH_InitStructure.ETH_DMAArbitration = ETH_DMAArbitration_RoundRobin_RxTx_2_1;
    /* Configure Ethernet */
    ETH_Init(&ETH_InitStructure, PHY_ADDRESS);
    /* Enable the Ethernet Rx Interrupt */
    ETH_DMAITConfig(ETH_DMA_IT_NIS
                    | ETH_DMA_IT_R
                    | ETH_DMA_IT_T
                    ,ENABLE);
    NVIC_SetPriority(ETH_IRQn,1<<4);
    NVIC_EnableIRQ(ETH_IRQn);
    ETH_DMATxDescChainInit(DMATxDscrTab, &Tx_Buff[0][0], ETH_TXBUFNB);
    ETH_DMARxDescChainInit(DMARxDscrTab, &Rx_Buff[0][0], ETH_RXBUFNB);
#ifdef USE_GIGA_MAC
    RGMII_TXC_Delay(0,2);
#endif
    ETH_Start();
    return RT_EOK;
}

static rt_err_t rt_ch32_eth_open(rt_device_t dev, rt_uint16_t oflag)
{
    LOG_D("eth open\r\n");
    return RT_EOK;
}

static rt_err_t rt_ch32_eth_close(rt_device_t dev)
{
    LOG_D("eth close\r\n");
    return RT_EOK;
}

static rt_ssize_t rt_ch32_eth_read(rt_device_t dev, rt_off_t pos, void *buffer, rt_size_t size)
{
    LOG_D("eth read\r\n");
    rt_set_errno(-RT_ENOSYS);
    return 0;
}

static rt_ssize_t rt_ch32_eth_write(rt_device_t dev, rt_off_t pos, const void *buffer, rt_size_t size)
{
    LOG_D("eth write\r\n");
    rt_set_errno(-RT_ENOSYS);
    return 0;
}

static rt_err_t rt_ch32_eth_control(rt_device_t dev, int cmd, void *args)
{
    switch (cmd)
    {
    case NIOCTL_GADDR:
        /* get mac address */
        if (args) rt_memcpy(args, ch32v30x_eth_device.dev_addr, 6);
        else return -RT_ERROR;
        break;

    default :
        break;
    }

    return RT_EOK;
}

rt_err_t rt_ch32_eth_tx(rt_device_t dev, struct pbuf *p)
{
    rt_err_t ret = RT_ERROR;
    struct pbuf *q;
    uint8_t *buffer = (uint8_t *)(DMATxDescToSet->Buffer1Addr);
    uint8_t *pdata;
    uint32_t framelength = 0,len=0;
    /* copy frame from pbufs to driver buffers */
    for (q = p; q != NULL; q = q->next)
    {
        /* Is this buffer available? If not, goto error */
        if ((DMATxDescToSet->Status & ETH_DMATxDesc_OWN) != (uint32_t)RESET)
        {
            LOG_E("buffer not valid\r\n");
            ret = ERR_USE;
            goto Tx_error;
        }

        pdata = q->payload;
        len = q->len;
        framelength += len;
        rt_memcpy(buffer,pdata,len);
        buffer += len;
    }

#ifdef ETH_TX_DUMP
    dump_hex(buffer, p->tot_len);
#endif

    DMATxDescToSet->ControlBufferSize = (framelength & ETH_DMATxDesc_TBS1);
    DMATxDescToSet->Status |= ETH_DMATxDesc_LS | ETH_DMATxDesc_FS;
    DMATxDescToSet->Status |= ETH_DMATxDesc_OWN;
    ret = ERR_OK;

    Tx_error:
    /* When Transmit Underflow flag is set, clear it and issue a Transmit Poll Demand to resume transmission */
    if ((ETH->DMASR & ETH_DMASR_TBUS) != (uint32_t)RESET)
    {
        /* Clear TUS ETHERNET DMA flag */
        ETH->DMASR = ETH_DMASR_TUS;
        /* Resume DMA transmission*/
        ETH->DMATPDR = 0;
    }

    DMATxDescToSet = (ETH_DMADESCTypeDef*) (DMATxDescToSet->Buffer2NextDescAddr);
    return ret;
}

struct pbuf *rt_ch32_eth_rx(rt_device_t dev)
{
    struct pbuf *p = NULL;
    struct pbuf *q = NULL;
    uint16_t len = 0;
    uint8_t *buffer;
    uint8_t *pdata;

    if(!frame.length)
    {
        return NULL;
    }
    len=frame.length;
    frame.length=0;
    buffer=(uint8_t *)frame.buffer;
    if (len > 0)
    {
        /* We allocate a pbuf chain of pbufs from the Lwip buffer pool */
        p = pbuf_alloc(PBUF_RAW, len, PBUF_POOL);
    }
#ifdef ETH_RX_DUMP
    dump_hex(buffer, p->tot_len);
#endif
    if (p != NULL)
    {
        for (q = p; q != NULL; q = q->next)
        {
            pdata = q->payload;
            rt_memcpy(pdata,buffer,q->len);
            pdata += (q->len);
            buffer += (q->len);
        }
     }
    else
    {
        LOG_E("p=null\r\n");
    }
    return p;
 }

void ETH_IRQHandler(void)
{
    GET_INT_SP();
    /* enter interrupt */
    rt_err_t result;
    rt_interrupt_enter();
    if(ETH->DMASR&ETH_DMA_IT_R)
    {
        ETH_DMAClearITPendingBit(ETH_DMA_IT_R);
        frame = ETH_RxPkt_ChainMode();
        result = eth_device_ready(&(ch32v30x_eth_device.parent));
        if (result != RT_EOK)
            rt_kprintf("RxCpltCallback err = %d\r\n", result);
    }
    if(ETH->DMASR&ETH_DMA_IT_T)
    {
        ETH_DMAClearITPendingBit(ETH_DMA_IT_T);
    }
    ETH_DMAClearITPendingBit(ETH_DMA_IT_NIS);
    /* leave interrupt */
    rt_interrupt_leave();
    FREE_INT_SP();
}

static int rt_hw_ch32_eth_init(void)
{
    rt_err_t state = RT_EOK;
    /* 84-c2-e4 WCH. */
    ch32v30x_eth_device.dev_addr[0] = 0x84;
    ch32v30x_eth_device.dev_addr[1] = 0xc2;
    ch32v30x_eth_device.dev_addr[2] = 0xe4;
    /* generate MAC (only for test). */
    ch32v30x_eth_device.dev_addr[3] = 0x1;
    ch32v30x_eth_device.dev_addr[4] = 0x2;
    ch32v30x_eth_device.dev_addr[5] = 0x3;

    ch32v30x_eth_device.parent.parent.init       = rt_ch32_eth_init;
    ch32v30x_eth_device.parent.parent.open       = rt_ch32_eth_open;
    ch32v30x_eth_device.parent.parent.close      = rt_ch32_eth_close;
    ch32v30x_eth_device.parent.parent.read       = rt_ch32_eth_read;
    ch32v30x_eth_device.parent.parent.write      = rt_ch32_eth_write;
    ch32v30x_eth_device.parent.parent.control    = rt_ch32_eth_control;
    ch32v30x_eth_device.parent.parent.user_data  = RT_NULL;

    ch32v30x_eth_device.parent.eth_rx     = rt_ch32_eth_rx;
    ch32v30x_eth_device.parent.eth_tx     = rt_ch32_eth_tx;

    /* register eth device */
    state = eth_device_init(&(ch32v30x_eth_device.parent), "e0");
    if (RT_EOK == state)
    {
        LOG_D("emac device init success");
    }
    else
    {
        LOG_E("emac device init faild: %d\r\n", state);
        state = -RT_ERROR;
    }

    return state;
}
